Added translations of a few more strings. Added Xbox 360 preset.

--- a/VidCoder/Resources/CommonRes.eu.resx
+++ b/VidCoder/Resources/CommonRes.eu.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AboutLicense" xml:space="preserve">
-    <value>Programa hau software askea da; birbanatu eta/edo aldatu dezakezu GNU Baimen Publiko Orokorraren baldintzetan Free Software Foundation-ek argitartuta bezala; bai Baimenaren 2 bertsioan, edo (zure aukeran) bertsio berriago batean.
+    <value>Programa hau software askea da; birbanatu eta/edo aldatu dezakezu GNU Baimen Publiko Orokorraren baldintzetan Free Software Foundation-ek argitaratuta bezala; bai Baimenaren 2 bertsioan, edo (zure aukeran) bertsio berriago batean.
 
 Programa hau erabilgarria izango delaren itxaropenarekin banatzen da, baina EZ DU INOLAKO BERMERIK; ez berezko MERKATAL edo NORBERE ASMOETARAKO GAITASUN bermerik. Ikusi GNU Baimen Publiko Orokorra xehetasun gehiagorako.
 
