--- a/VidCoder/Resources/EnumsRes.eu.resx
+++ b/VidCoder/Resources/EnumsRes.eu.resx
@@ -130,7 +130,7 @@
     <value>Zorrotza</value>
   </data>
   <data name="Custom" xml:space="preserve">
-    <value>Noberea</value>
+    <value>Norberea</value>
   </data>
   <data name="Decomb_Bob" xml:space="preserve">
     <value>Bob</value>
