--- a/VidCoder/Resources/EncodingRes.hu.resx
+++ b/VidCoder/Resources/EncodingRes.hu.resx
@@ -59,46 +59,46 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
               </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
+              <xsd:attribute name="name" use="required" type="xsd:string"/>
+              <xsd:attribute name="type" type="xsd:string"/>
+              <xsd:attribute name="mimetype" type="xsd:string"/>
+              <xsd:attribute ref="xml:space"/>
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
             <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="alias" type="xsd:string"/>
+              <xsd:attribute name="name" type="xsd:string"/>
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="data">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
+              <xsd:attribute ref="xml:space"/>
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
+              <xsd:attribute name="name" type="xsd:string" use="required"/>
             </xsd:complexType>
           </xsd:element>
         </xsd:choice>
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Save" xml:space="preserve">
     <value>Mentés</value>
@@ -588,6 +588,24 @@ Akkor érdemes beállítani, ha tudod, hogy a lejátszó eszköz csak egy bizony
   <data name="AudioCompressionToolTip" xml:space="preserve">
     <value>A használni kívánt tömörítés mértéke. {0} Érvényes értékek {1} - {2} között.</value>
   </data>
+  <data name="AudioEncoder_copy" xml:space="preserve">
+    <value>Automata másolás</value>
+  </data>
+  <data name="AudioEncoder_copy_aac" xml:space="preserve">
+    <value>AAC másolása</value>
+  </data>
+  <data name="AudioEncoder_copy_ac3" xml:space="preserve">
+    <value>AC3 másolása</value>
+  </data>
+  <data name="AudioEncoder_copy_dts" xml:space="preserve">
+    <value>DTS másolása</value>
+  </data>
+  <data name="AudioEncoder_copy_dtshd" xml:space="preserve">
+    <value>DTS-HD másolása</value>
+  </data>
+  <data name="AudioEncoder_copy_mp3" xml:space="preserve">
+    <value>MP3 másolása</value>
+  </data>
   <data name="AudioEncoder_faac" xml:space="preserve">
     <value>AAC (FAAC)</value>
     <comment>Leaving this blank will mean we rely on the friendly name from HandBrake. The short name is used for the key (: gets replaced by _)</comment>
@@ -606,6 +624,30 @@ Akkor érdemes beállítani, ha tudod, hogy a lejátszó eszköz csak egy bizony
   </data>
   <data name="AudioEncoder_vorbis" xml:space="preserve">
     <value>Vorbis (Vorbis)</value>
+  </data>
+  <data name="Mixdown_5point1" xml:space="preserve">
+    <value>5.1 csatorna</value>
+  </data>
+  <data name="Mixdown_5_2_lfe" xml:space="preserve">
+    <value>7.1 (5F/2R/LFE)</value>
+  </data>
+  <data name="Mixdown_dpl1" xml:space="preserve">
+    <value>Dolby Surround</value>
+  </data>
+  <data name="Mixdown_dpl2" xml:space="preserve">
+    <value>Dolby Pro Logic II</value>
+  </data>
+  <data name="Mixdown_left_only" xml:space="preserve">
+    <value>Mono (Csak bal)</value>
+  </data>
+  <data name="Mixdown_mono" xml:space="preserve">
+    <value>Mono</value>
+  </data>
+  <data name="Mixdown_right_only" xml:space="preserve">
+    <value>Mono (csak jobb)</value>
+  </data>
+  <data name="Mixdown_stereo" xml:space="preserve">
+    <value>Sztereó</value>
   </data>
   <data name="Bitrate" xml:space="preserve">
     <value>Bitsűrűség</value>
@@ -798,8 +840,17 @@ Felülírja az összes többi beállítást.</value>
   <data name="VideoEncoder_ffmpeg4" xml:space="preserve">
     <value>MPEG-4 (Libav)</value>
   </data>
+  <data name="VideoEncoder_x264" xml:space="preserve">
+    <value>H.264 (x264)</value>
+  </data>
   <data name="Analysis_Most" xml:space="preserve">
     <value>Legtöbb</value>
+  </data>
+  <data name="AdvancedQuery" xml:space="preserve">
+    <value>Haladó lekérdezés</value>
+  </data>
+  <data name="Video" xml:space="preserve">
+    <value>Videó</value>
   </data>
   <data name="X264Settings" xml:space="preserve">
     <value>x264 beállítások</value>
@@ -818,9 +869,6 @@ Felülírja az összes többi beállítást.</value>
   </data>
   <data name="MoreSettingsLabel" xml:space="preserve">
     <value>További beállítások:</value>
-  </data>
-  <data name="Video" xml:space="preserve">
-    <value>Videó</value>
   </data>
   <data name="Track" xml:space="preserve">
     <value>Sáv</value>
@@ -846,25 +894,10 @@ Felülírja az összes többi beállítást.</value>
   <data name="DtsMp4Warning" xml:space="preserve">
     <value>Kevés lejátszó támogatja a DTS hang lejátszását az MP4-es formátumokba. A DTS hanghoz MKV ajánlott.</value>
   </data>
-  <data name="AudioEncoder_copy" xml:space="preserve">
-    <value>Automata másolás</value>
-  </data>
-  <data name="AudioEncoder_copy_aac" xml:space="preserve">
-    <value>AAC másolása</value>
-  </data>
-  <data name="AudioEncoder_copy_ac3" xml:space="preserve">
-    <value>AC3 másolása</value>
-  </data>
-  <data name="AudioEncoder_copy_dts" xml:space="preserve">
-    <value>DTS másolása</value>
-  </data>
-  <data name="AudioEncoder_copy_dtshd" xml:space="preserve">
-    <value>DTS-HD másolása</value>
-  </data>
-  <data name="AudioEncoder_copy_mp3" xml:space="preserve">
-    <value>MP3 másolása</value>
-  </data>
   <data name="AudioEncoder_ffflac24" xml:space="preserve">
     <value>FLAC 24-bit (Libav)</value>
+  </data>
+	<data name="Advanced_PsychovisualLabel" xml:space="preserve">
+    <value>Pszichovizuális</value>
   </data>
 </root>
