--- a/VidCoder/Resources/MainRes.hu.resx
+++ b/VidCoder/Resources/MainRes.hu.resx
@@ -59,46 +59,46 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+  <xsd:schema xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata" id="root">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
           <xsd:element name="metadata">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
               </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
+              <xsd:attribute name="name" use="required" type="xsd:string"/>
+              <xsd:attribute name="type" type="xsd:string"/>
+              <xsd:attribute name="mimetype" type="xsd:string"/>
+              <xsd:attribute ref="xml:space"/>
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
             <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="alias" type="xsd:string"/>
+              <xsd:attribute name="name" type="xsd:string"/>
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="data">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
+              <xsd:attribute ref="xml:space"/>
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
             <xsd:complexType>
               <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
+              <xsd:attribute name="name" type="xsd:string" use="required"/>
             </xsd:complexType>
           </xsd:element>
         </xsd:choice>
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="TitleLabel" xml:space="preserve">
     <value>Cím:</value>
@@ -334,7 +334,7 @@
     <value>Kódolás megállítva.</value>
   </data>
   <data name="DeleteSourceFilesConfirmationMessage" xml:space="preserve">
-    <value>Biztosan törölni akarsz {0} forrásfájlt?</value>
+    <value>Biztosan törölni akarod a(z) {0} forrásfájlt/mappát?</value>
   </data>
   <data name="DeleteSourceFilesConfirmationTitle" xml:space="preserve">
     <value>Törlés megerősítése</value>
@@ -373,7 +373,7 @@
     <value>A VidCoder befejezte az összes sorbaállított fájl kódolását.</value>
   </data>
   <data name="OutputFolderRequiredMessage" xml:space="preserve">
-    <value>Cannot add encode jobs without a default output folder. Press OK to pick one.</value>
+    <value>Feladatok kódolása nem lehetséges alapértelmezett kimeneti mappa nélkül. Kattints a Rendben-re a kiválasztásához.</value>
   </data>
   <data name="OutputFolderRequiredTitle" xml:space="preserve">
     <value>Alapértelmezett kimeneti mappa szükséges!</value>
@@ -395,6 +395,9 @@
   </data>
   <data name="WhenDoneLabel" xml:space="preserve">
     <value>Amikor végez:</value>
+  </data>
+  <data name="Preset_AndroidTablet" xml:space="preserve">
+    <value>Android tablet</value>
   </data>
   <data name="Preset_Android" xml:space="preserve">
     <value>Android</value>
@@ -510,20 +513,17 @@
   <data name="OutputDirectoryPickerText" xml:space="preserve">
     <value>Add meg az átkonvertált videófájlok kimeneti mappáját.</value>
   </data>
-  <data name="ModifiedAffix" xml:space="preserve">
-    <value>(Módosított)</value>
-  </data>
   <data name="LengthPreviewLabel" xml:space="preserve">
     <value>Hossz: {0}</value>
+  </data>
+  <data name="ModifiedAffix" xml:space="preserve">
+    <value>(Módosított)</value>
   </data>
   <data name="PlayingVideoStatus" xml:space="preserve">
     <value>Videó lejátszása</value>
   </data>
   <data name="OpeningFolderStatus" xml:space="preserve">
     <value>Mappa megnyitása</value>
-  </data>
-  <data name="Preset_AndroidTablet" xml:space="preserve">
-    <value>Android tablet</value>
   </data>
   <data name="CloseVideoSourceToolTip" xml:space="preserve">
     <value>Videóforrás bezárása</value>
@@ -560,5 +560,14 @@
   </data>
   <data name="CopyLog" xml:space="preserve">
     <value>Napló másolása</value>
+  </data>
+  <data name="PresetDiscardConfirmMessage" xml:space="preserve">
+    <value>Nem mentett változásokkal rendelkezel. Biztosan el akarod őket vetni és átváltani egy másik sémára?</value>
+  </data>
+  <data name="PresetDiscardConfirmTitle" xml:space="preserve">
+    <value>Változások elvetése?</value>
+  </data>
+	<data name="RemoveAudioTrackToolTip" xml:space="preserve">
+    <value>Hangsáv eltávolítása</value>
   </data>
 </root>
