--- a/VidCoder/Resources/EncodingRes.resx
+++ b/VidCoder/Resources/EncodingRes.resx
@@ -247,7 +247,9 @@ may have problems with Weighted P-frame prediction: the Apple TV is completely i
   <data name="Audio_DrcToolTip" xml:space="preserve">
     <value>Dynamic Range Compression. Valid values are 0-4.
 
-For source audio that has a wide dynamic range (very loud and very soft sequences), DRC allows you to "compress" the range by making loud sections softer and soft sections louder.</value>
+For source audio that has a wide dynamic range (very loud and very soft sequences), DRC allows you to "compress" the range by making loud sections softer and soft sections louder.
+
+This only works with AC3 sources.</value>
   </data>
   <data name="Audio_GainToolTip" xml:space="preserve">
     <value>Amplify or attenuate audio before encoding. Valid values are -20 to +20 dB.</value>
@@ -315,7 +317,7 @@ You should set this if you know your playback device only supports a certain pro
     <value>Audio</value>
   </data>
   <data name="TabHeader_Advanced" xml:space="preserve">
-    <value>Advanced</value>
+    <value>Advanced Video</value>
   </data>
   <data name="Rename" xml:space="preserve">
     <value>Rename</value>
@@ -908,12 +910,21 @@ Overrides all other settings.</value>
   <data name="AudioEncoder_fdk_haac" xml:space="preserve">
     <value>HE-AAC (FDK)</value>
   </data>
-	<data name="X264SettingsRadioButtonBasic" xml:space="preserve">
+  <data name="X264SettingsRadioButtonBasic" xml:space="preserve">
     <value>Basic</value>
     <comment>Label for radio button to choose basic x264 settings: Preset, Profile, Tune, Level.</comment>
   </data>
-	<data name="X264SettingsRadioButtonAdvanced" xml:space="preserve">
+  <data name="X264SettingsRadioButtonAdvanced" xml:space="preserve">
     <value>Advanced Tab</value>
     <comment>Label for radio button to choose advanced x264 settings on a separate tab.</comment>
+  </data>
+  <data name="VideoEncoder_mpeg2" xml:space="preserve">
+    <value>MPEG-2</value>
+  </data>
+  <data name="VideoEncoder_mpeg4" xml:space="preserve">
+    <value>MPEG-4</value>
+  </data>
+  <data name="VideoEncoder_theora" xml:space="preserve">
+    <value>Theora</value>
   </data>
 </root>
